--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-image-picker": "^2.3.3",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^1.10.2",
     "react-native-responsive-screen": "^1.4.1",
