--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "axios": "^0.19.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-picker": "^2.3.3",
     "react-native-paper": "^4.0.1",
